--- a/src/main/resources/db/changelog/v1/db.create-passengers-ratings-table.yaml
+++ b/src/main/resources/db/changelog/v1/db.create-passengers-ratings-table.yaml
@@ -20,7 +20,7 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: rate
-                  type: int
+                  type: double
                   constraints:
                     nullable: false
                     checkConstraint: "CHECK (rate &gt;= 0 AND rate &lt;= 5)"
