--- a/src/main/resources/db/changelog/v1/db.create-passengers-ratings-table.yaml
+++ b/src/main/resources/db/changelog/v1/db.create-passengers-ratings-table.yaml
@@ -19,6 +19,9 @@ databaseChangeLog:
                   constraints:
                     nullable: false
               - column:
+                  name: driver_id
+                  type: bigint
+              - column:
                   name: rate
                   type: double
                   constraints:
