fix: ad rate validation; ci: add feign client

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,11 @@
             <artifactId>resilience4j-spring-boot3</artifactId>
             <version>${resilience4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
