--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,3 +27,7 @@ spring:
             error-decoder: com.software.modsen.ratingservice.config.RideErrorDecoder
       circuitbreaker:
         enabled: true
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
