feat: add kafka consumer

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <spring-cloud-starter-loadbalancer.version>4.1.4</spring-cloud-starter-loadbalancer.version>
         <resilience4j.version>2.2.0</resilience4j.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
+        <jackson-databind.version>2.18.0</jackson-databind.version>
     </properties>
     <dependencies>
         <dependency>
@@ -56,12 +57,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>${spring-boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -76,12 +75,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
-            <version>${spring-cloud-starter-openfeign.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
-            <version>${spring-cloud-starter-loadbalancer.version}</version>
         </dependency>
         <dependency>
             <groupId>io.github.resilience4j</groupId>
@@ -106,6 +103,16 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.kafka</groupId>
+            <artifactId>spring-kafka</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
