--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <resilience4j.version>2.2.0</resilience4j.version>
         <spring-cloud.version>2023.0.3</spring-cloud.version>
         <jackson-databind.version>2.18.0</jackson-databind.version>
+        <springdoc-openapi-starter-webmvc-ui.version>2.6.0</springdoc-openapi-starter-webmvc-ui.version>
     </properties>
     <dependencies>
         <dependency>
@@ -112,7 +113,11 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>${springdoc-openapi-starter-webmvc-ui.version}</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
