--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <spring-cloud-starter-circuitbreaker-resilience4j.version>3.1.2</spring-cloud-starter-circuitbreaker-resilience4j.version>
         <micrometer-registry-prometheus.version>1.13.6</micrometer-registry-prometheus.version>
         <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
+        <spring-cloud-starter-security.version>2.2.5.RELEASE</spring-cloud-starter-security.version>
     </properties>
     <dependencies>
         <dependency>
@@ -206,6 +207,19 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-jose</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-security</artifactId>
+            <version>${spring-cloud-starter-security.version}</version>
         </dependency>
     </dependencies>
     <dependencyManagement>
