--- a/src/main/resources/db/changelog/v1/db.create-drivers-ratings.yaml
+++ b/src/main/resources/db/changelog/v1/db.create-drivers-ratings.yaml
@@ -15,12 +15,12 @@ databaseChangeLog:
                     nullable: false
               - column:
                   name: driver_id
-                  type: bigint
+                  type: varchar(60)
                   constraints:
                     nullable: false
               - column:
                   name: passenger_id
-                  type: bigint
+                  type: varchar(60)
               - column:
                   name: rate
                   type: double
