--- a/pom.xml
+++ b/pom.xml
@@ -34,8 +34,14 @@
         <micrometer-registry-prometheus.version>1.13.6</micrometer-registry-prometheus.version>
         <logstash-logback-encoder.version>8.0</logstash-logback-encoder.version>
         <spring-cloud-starter-security.version>2.2.5.RELEASE</spring-cloud-starter-security.version>
+        <spring-boot-starter-aop.version>3.4.1</spring-boot-starter-aop.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+            <version>${spring-boot-starter-aop.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
